--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,7 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "defaultDocument": "index1.html"
   }
 }
