--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,8 @@
         "destination": "/index.html"
       }
     ],
+    "cleanUrls": true,
+    "trailingSlash": false,
     "defaultDocument": "index1.html"
   }
 }
